# http_stub

./: README.md
httpclient/: CMakeLists.txt  README.md
httpclient/httpclient/: main.cpp
httpclient/httpclient.xcodeproj/: project.pbxproj
httpclient/httpclient.xcodeproj/project.xcworkspace/xcuserdata/agaltsevstas.xcuserdatad/: UserInterfaceState.xcuserstate
httpclient/httpclient.xcodeproj/xcuserdata/agaltsevstas.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
httpclient/httpclient.xcodeproj/xcuserdata/agaltsevstas.xcuserdatad/xcschemes/: xcschememanagement.plist
httpserver/: CMakeLists.txt  README.md
httpserver/httpserver/: main.cpp
httpserver/httpserver.xcodeproj/: project.pbxproj
httpserver/httpserver.xcodeproj/project.xcworkspace/xcuserdata/agaltsevstas.xcuserdatad/: UserInterfaceState.xcuserstate
httpserver/httpserver.xcodeproj/xcuserdata/agaltsevstas.xcuserdatad/xcschemes/: xcschememanagement.plist
